fixing bug for the overflow

--- a/src/globalResets.scss
+++ b/src/globalResets.scss
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-body{
+html,body{
   margin:0;
   padding:0;
   box-sizing: border-box;
   font-family: "Roboto";
+}
+body{
+height: 100%;
+overflow: hidden !important;
+width: 100%;
+position: fixed;
 }
